--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.20.0",
+    "three": "^0.182.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
